# real-time-chat

./: .gitignore
client/: package.json
client/src/: main.js
client/src/router/: index.js
client/src/styles/: fonts.css  global.css
client/src/views/: Chat.vue  Login.vue
server/: Cargo.toml  docker-compose.yml
server/migrations/: 20251130234629_usuarios.down.sql  20251130234629_usuarios.up.sql  20260109012023_mensagens.down.sql  20260109012023_mensagens.up.sql
server/src/: main.rs
server/src/handler/: chat_handler.rs  mensagem_handler.rs  mod.rs  usuario_handler.rs
server/src/model/: mensagem_model.rs  mod.rs  usuario_model.rs
server/src/schema/: mensagem_schema.rs  mod.rs  usuario_schema.rs
